fix(Réglages des warnings)